# Notes

./: .gitignore  Eigen.md  README.md  ceres.md  diff.md  gitTutorial.md  images  mapBlock_MergeNote.md  process optomize.md  test  test.md  valgrind.md  子地图存储加载流程设计_20230605.docx  子地图管理类结构设计_20230606.docx  开发工具.md  邮件协议.md
C++/: C++ bug.md  C++ 代码优化.md  C++ 内存管理.md  C++ 函数的调用约定  C++ 包装器.md  C++ 反射.md  C++ 对象拷贝问题.md  C++ 编程优化.md  C++ 调用shell命令.md  C++ 调试.md  C++ 调试方法.md  C++.md  C++11.md  C++11新特性.md  C++编程规范.md  Efficiet STL.md  GCC & LLVM .md  RES Usage.md   STL.md  STL与线程安全.md  glibc & gcc.md  互斥访问.md  关联容器的假性内存泄漏问题.md  动态内存分配.md  容器拷贝效率对比.md  数据溢出.md  线程同步.md  降低io频率.md  随机数生成.md
CMake/: CMake Demo.md  CMake.md  CMake_core.md
Docker/: .bashrc  .gitignore  config  dev_into.sh  tutorial.md
Documents/: .~C++拾遗.docx  DOCX 文档.docx  domain-Template.docx  周伍雄_工作报告_2022.08.22.pptx  字典生成工具测试文档-精简版-new.docx  工作报告.docx
Eigen/: base.md
Linear algebra/: Linear algebra.md
Notes/: Other.md  README.en.md  docker.md  gitTutorial.md  make.md  screen.md  ubuntu.md  vim.md  vscode.md
ORB_SLAM2/: ORB_SLAM2-func.md  ORB_SLAM2_struct.md  markmap-Demo.md  基本概念  流程整理.md
Results_Test/: .~CPU Usage.xlsx  CPU Usage.xlsx  XLSX Worksheet.xlsx  cpu.txt  test.txt
boost/: boost  序列化指针.md  boost.md
boost/boostTest/: CMakeLists.txt  boostLoadInstance.cpp  boostLoadPoint.cpp  boostMemoryTest.cpp  boostTest.cpp
gTest/: gTest.md
gdb/: core dump generate .md  gdb.md  调试（core dump）.md
openCV/: opencv.md
pdf/: Liaobots UI.html
plant_UML/: Altas-Block.puml  (+6 more)
test/transform/: CMakeLists.txt  ceres.cpp  curve_fitting.cpp  posTransform (copy).cpp  posTransform.cpp  powell.cpp  robust_curve_fit.cpp  simple_bundle_adjuster.cpp
(+1046 files in other folders)
